codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────╮
│ ✨ Update available! 1.154.2 -> 9.9.9          │
│ Run vp install -g @ore-cli/ore to update.      │
│                                                │
│ See full release notes:                        │
│ https://github.com/ore-cli/ore/releases/latest │
╰────────────────────────────────────────────────╯
